Cherry-pick 61868ae02c5f. rdar://78929424

Blob url downloads fail when triggered from webextension
    rdar://78929424
    https://bugs.webkit.org/show_bug.cgi?id=226440

    Reviewed by Timothy Hatcher.

    Web Extensions can have anchor tags to blobs with download attributes
    that are expected to download, but are prevented by isUnsupportedWebExtensionNavigation.

    isUnsupportedWebExtensionNavigation is about preventing navigations away from extensions,
    but downloads do not cause the page to navigate away. Therefore adding a case for downloads
    here should be okay.

    * Source/WebKit/UIProcess/Cocoa/NavigationState.mm:
    (WebKit::isUnsupportedWebExtensionNavigation):

    Canonical link: https://commits.webkit.org/283220@main

Canonical link: https://commits.webkit.org/280938.310@safari-7619-branch